office-k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: office-backend
  namespace: office-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: office-backend

  template:
    metadata:
      labels:
        app: office-backend

    spec:
      containers:
      - name: office-backend
        image: 808872801655.dkr.ecr.ap-southeast-1.amazonaws.com/office-backend:latest

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"

        livenessProbe:
          httpGet:
            path: /employees
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /employees
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

        volumeMounts:
        - name: office-storage
          mountPath: /app/uploads

      volumes:
      - name: office-storage
        persistentVolumeClaim:
          claimName: office-pvc
