office-k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: office-frontend
  namespace: office-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: office-frontend

  template:
    metadata:
      labels:
        app: office-frontend

    spec:
      containers:
      - name: office-frontend

        image: 808872801655.dkr.ecr.ap-southeast-1.amazonaws.com/office-frontend:latest

        ports:
        - containerPort: 80


        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "300m"
            memory: "256Mi"


        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3


        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
