office-k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: office-backend-service
  namespace: office-app

spec:
  selector:
    app: office-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
