office-k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: office-frontend-service
  namespace: office-app

spec:
  selector:
    app: office-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
